model performance stage

--- a/code/02-create_gbert_model.ipynb
+++ b/code/02-create_gbert_model.ipynb
@@ -350,7 +350,14 @@
     }
    ],
    "source": [
-    "print(classification_report(y_true, y_pred_05, target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"]))"
+    "print(\n",
+    "    classification_report(\n",
+    "        y_true,\n",
+    "        y_pred_05,\n",
+    "        target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"],\n",
+    "        zero_division=0,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -406,7 +413,10 @@
    "source": [
     "print(\n",
     "    classification_report(\n",
-    "        y_true, y_pred_thresh, target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"]\n",
+    "        y_true,\n",
+    "        y_pred_thresh,\n",
+    "        target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"],\n",
+    "        zero_division=0,\n",
     "    )\n",
     ")"
    ]
