--- a/code/03-model_performance.ipynb
+++ b/code/03-model_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cf11d984",
    "metadata": {
     "execution": {
@@ -22,18 +22,23 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
+    "from sklearn.metrics import classification_report\n",
+    "from torch.utils.data import DataLoader\n",
     "from transformers import AutoModelForSequenceClassification\n",
     "from transformers import AutoTokenizer\n",
     "from transformers import logging\n",
     "\n",
-    "import src"
+    "import src\n",
+    "from src.bert.dataset import PBertDataset\n",
+    "from src.bert.dataset.strategies import MLMin1PopIdeol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0a50acf3",
    "metadata": {
     "execution": {
@@ -51,24 +56,32 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logging.set_verbosity_error()\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "THRESHOLDS = {0: 0.415961, 1: 0.295400, 2: 0.429109, 3: 0.302714}\n",
     "print(DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "ee45bc66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXCLUDE_CODERS = []\n",
+    "test = PBertDataset.from_disk(\n",
+    "    path=src.PATH / \"data/labeled_data/test.csv.zip\",\n",
+    "    label_strategy=MLMin1PopIdeol(),\n",
+    "    exclude_coders=EXCLUDE_CODERS,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6ae957f7",
    "metadata": {
     "execution": {
@@ -98,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ae52ec66",
    "metadata": {
     "execution": {
@@ -118,45 +131,27 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_parquet(src.PATH / \"data/raw/sentences.parquet.gzip\")"
+    "collate_fn = test.create_collate_fn(tokenizer)\n",
+    "test_loader = DataLoader(test, collate_fn=collate_fn, batch_size=64, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "90337b18",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-27T16:45:34.301439Z",
-     "iopub.status.busy": "2024-03-27T16:45:34.301258Z",
-     "iopub.status.idle": "2024-03-27T16:45:34.304597Z",
-     "shell.execute_reply": "2024-03-27T16:45:34.304263Z"
-    },
-    "papermill": {
-     "duration": 0.00613,
-     "end_time": "2024-03-27T16:45:34.305449",
-     "exception": false,
-     "start_time": "2024-03-27T16:45:34.299319",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "456a76c1",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def iter_batches(df, batch_size):\n",
-    "    i = 0\n",
-    "    while (i + batch_size) <= len(df):\n",
-    "        slice_df = df.iloc[i : i + batch_size]\n",
-    "        i += batch_size\n",
-    "        yield slice_df.to_dict(orient=\"list\")\n",
-    "    if i < len(df):\n",
-    "        slice_df = df.iloc[i:]\n",
-    "        yield slice_df.to_dict(orient=\"list\")"
+    "def apply_thresh(y_proba, thresholds: dict):\n",
+    "    y_proba = y_proba.copy()\n",
+    "    for dim, thresh in thresholds.items():\n",
+    "        y_proba[:, dim] = np.where(y_proba[:, dim] > thresh, 1, 0)\n",
+    "    return y_proba"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "00665888",
    "metadata": {
     "execution": {
@@ -176,46 +171,104 @@
    },
    "outputs": [],
    "source": [
-    "results = []\n",
     "with torch.inference_mode():\n",
-    "    for batch in iter_batches(df, 64):\n",
-    "        ids, text = batch[\"sample_id\"], batch[\"text\"]\n",
-    "        encodings = tokenizer(text, return_tensors=\"pt\", padding=True).to(DEVICE)\n",
+    "    y_true = []\n",
+    "    y_pred = []\n",
+    "    for batch in test_loader:\n",
+    "        encodings = batch[\"encodings\"]\n",
+    "        encodings = encodings.to(DEVICE)\n",
+    "        labels = batch[\"labels\"].to(DEVICE)\n",
     "        out = model(**encodings)\n",
-    "        proba_tensor = torch.nn.functional.sigmoid(out.logits)\n",
-    "        probas = proba_tensor.cpu().detach().numpy()\n",
-    "        \n",
-    "        result = pd.DataFrame(probas)\n",
-    "        result.columns = [\"elite\", \"pplcentr\", \"left\", \"right\"]\n",
-    "        result[\"sample_id\"] = ids\n",
-    "        results.append(result)"
+    "        preds = torch.nn.functional.sigmoid(out.logits)\n",
+    "        y_true.extend(batch[\"labels\"].numpy())\n",
+    "        y_pred.extend(preds.cpu().numpy())\n",
+    "    y_pred_05 = np.where(np.array(y_pred) > 0.5, 1, 0)\n",
+    "    y_pred_thresh = apply_thresh(np.array(y_pred), THRESHOLDS)\n",
+    "    y_true = np.array(y_true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "054eb632",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-27T17:47:43.482437Z",
-     "iopub.status.busy": "2024-03-27T17:47:43.482135Z",
-     "iopub.status.idle": "2024-03-27T17:47:45.826687Z",
-     "shell.execute_reply": "2024-03-27T17:47:45.826174Z"
-    },
-    "papermill": {
-     "duration": 2.348084,
-     "end_time": "2024-03-27T17:47:45.828237",
-     "exception": false,
-     "start_time": "2024-03-27T17:47:43.480153",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "655782bb",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "out = pd.concat(results)\n",
-    "out = out[[\"sample_id\", \"elite\", \"pplcentr\", \"left\", \"right\"]]\n",
-    "out.to_parquet(src.PATH / \"data/interim/sentence_predictions.parquet.gzip\", compression=\"gzip\")"
+    "print(\n",
+    "    classification_report(\n",
+    "        y_true,\n",
+    "        y_pred_05,\n",
+    "        target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"],\n",
+    "        zero_division=0,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd3f9842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "    classification_report(\n",
+    "        y_true,\n",
+    "        y_pred_thresh,\n",
+    "        target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"],\n",
+    "        zero_division=0,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e391d6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "performance = classification_report(\n",
+    "    y_true,\n",
+    "    y_pred_thresh,\n",
+    "    target_names=[\"elite\", \"pplcentr\", \"left\", \"right\"],\n",
+    "    zero_division=0,\n",
+    "    output_dict=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a41c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = pd.DataFrame(performance).T.drop(\"support\", axis=1)\n",
+    "out = out.reset_index().rename(\n",
+    "    {\"index\": \"Dimension\", \"precision\": \"Precision\", \"f1-score\": \"F1\", \"recall\": \"Recall\"},\n",
+    "    axis=1,\n",
+    ")\n",
+    "out[\"Dimension\"] = out[\"Dimension\"].replace(\n",
+    "    {\n",
+    "        \"elite\": \"Anti-Elitism\",\n",
+    "        \"pplcentr\": \"People-Centrism\",\n",
+    "        \"left\": \"Left-Wing Ideology\",\n",
+    "        \"right\": \"Right-Wing Ideology\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "out = out.iloc[:6, :].round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dce559a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out.to_latex(src.PATH / \"results/tables/model_performance.tex\", index=False)"
    ]
   }
  ],
