--- a/code/03-model_performance.ipynb
+++ b/code/03-model_performance.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf11d984",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-27T16:45:12.971413Z",
-     "iopub.status.busy": "2024-03-27T16:45:12.971245Z",
-     "iopub.status.idle": "2024-03-27T16:45:23.509178Z",
-     "shell.execute_reply": "2024-03-27T16:45:23.508677Z"
+     "iopub.execute_input": "2024-03-27T20:01:31.357645Z",
+     "iopub.status.busy": "2024-03-27T20:01:31.357495Z",
+     "iopub.status.idle": "2024-03-27T20:01:47.840534Z",
+     "shell.execute_reply": "2024-03-27T20:01:47.840070Z"
     },
     "papermill": {
-     "duration": 10.542342,
-     "end_time": "2024-03-27T16:45:23.510832",
+     "duration": 16.487506,
+     "end_time": "2024-03-27T20:01:47.841996",
      "exception": false,
-     "start_time": "2024-03-27T16:45:12.968490",
+     "start_time": "2024-03-27T20:01:31.354490",
      "status": "completed"
     },
     "tags": []
@@ -38,25 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a50acf3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-27T16:45:23.522136Z",
-     "iopub.status.busy": "2024-03-27T16:45:23.521902Z",
-     "iopub.status.idle": "2024-03-27T16:45:23.679700Z",
-     "shell.execute_reply": "2024-03-27T16:45:23.679325Z"
+     "iopub.execute_input": "2024-03-27T20:01:47.848254Z",
+     "iopub.status.busy": "2024-03-27T20:01:47.848038Z",
+     "iopub.status.idle": "2024-03-27T20:01:47.993198Z",
+     "shell.execute_reply": "2024-03-27T20:01:47.992816Z"
     },
     "papermill": {
-     "duration": 0.160749,
-     "end_time": "2024-03-27T16:45:23.680687",
+     "duration": 0.148371,
+     "end_time": "2024-03-27T20:01:47.994152",
      "exception": false,
-     "start_time": "2024-03-27T16:45:23.519938",
+     "start_time": "2024-03-27T20:01:47.845781",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "logging.set_verbosity_error()\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -66,9 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ee45bc66",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:01:47.998462Z",
+     "iopub.status.busy": "2024-03-27T20:01:47.998277Z",
+     "iopub.status.idle": "2024-03-27T20:01:48.176978Z",
+     "shell.execute_reply": "2024-03-27T20:01:48.176617Z"
+    },
+    "papermill": {
+     "duration": 0.182064,
+     "end_time": "2024-03-27T20:01:48.178201",
+     "exception": false,
+     "start_time": "2024-03-27T20:01:47.996137",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "EXCLUDE_CODERS = []\n",
@@ -81,20 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6ae957f7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-27T16:45:23.684172Z",
-     "iopub.status.busy": "2024-03-27T16:45:23.684017Z",
-     "iopub.status.idle": "2024-03-27T16:45:33.099576Z",
-     "shell.execute_reply": "2024-03-27T16:45:33.098931Z"
+     "iopub.execute_input": "2024-03-27T20:01:48.182466Z",
+     "iopub.status.busy": "2024-03-27T20:01:48.182283Z",
+     "iopub.status.idle": "2024-03-27T20:01:57.877322Z",
+     "shell.execute_reply": "2024-03-27T20:01:57.876670Z"
     },
     "papermill": {
-     "duration": 9.419051,
-     "end_time": "2024-03-27T16:45:33.101181",
+     "duration": 9.698711,
+     "end_time": "2024-03-27T20:01:57.878800",
      "exception": false,
-     "start_time": "2024-03-27T16:45:23.682130",
+     "start_time": "2024-03-27T20:01:48.180089",
      "status": "completed"
     },
     "tags": []
@@ -111,20 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ae52ec66",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-27T16:45:33.107624Z",
-     "iopub.status.busy": "2024-03-27T16:45:33.107436Z",
-     "iopub.status.idle": "2024-03-27T16:45:34.294640Z",
-     "shell.execute_reply": "2024-03-27T16:45:34.294112Z"
+     "iopub.execute_input": "2024-03-27T20:01:57.884445Z",
+     "iopub.status.busy": "2024-03-27T20:01:57.884165Z",
+     "iopub.status.idle": "2024-03-27T20:01:57.887171Z",
+     "shell.execute_reply": "2024-03-27T20:01:57.886818Z"
     },
     "papermill": {
-     "duration": 1.190721,
-     "end_time": "2024-03-27T16:45:34.296147",
+     "duration": 0.006188,
+     "end_time": "2024-03-27T20:01:57.888021",
      "exception": false,
-     "start_time": "2024-03-27T16:45:33.105426",
+     "start_time": "2024-03-27T20:01:57.881833",
      "status": "completed"
     },
     "tags": []
@@ -137,9 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "456a76c1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:01:57.891939Z",
+     "iopub.status.busy": "2024-03-27T20:01:57.891613Z",
+     "iopub.status.idle": "2024-03-27T20:01:57.894436Z",
+     "shell.execute_reply": "2024-03-27T20:01:57.894097Z"
+    },
+    "papermill": {
+     "duration": 0.005729,
+     "end_time": "2024-03-27T20:01:57.895304",
+     "exception": false,
+     "start_time": "2024-03-27T20:01:57.889575",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def apply_thresh(y_proba, thresholds: dict):\n",
@@ -151,20 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "00665888",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-27T16:45:34.308637Z",
-     "iopub.status.busy": "2024-03-27T16:45:34.308468Z",
-     "iopub.status.idle": "2024-03-27T17:47:43.473906Z",
-     "shell.execute_reply": "2024-03-27T17:47:43.473343Z"
+     "iopub.execute_input": "2024-03-27T20:01:57.899279Z",
+     "iopub.status.busy": "2024-03-27T20:01:57.898969Z",
+     "iopub.status.idle": "2024-03-27T20:02:05.518267Z",
+     "shell.execute_reply": "2024-03-27T20:02:05.517828Z"
     },
     "papermill": {
-     "duration": 3729.168655,
-     "end_time": "2024-03-27T17:47:43.475304",
+     "duration": 7.622756,
+     "end_time": "2024-03-27T20:02:05.519654",
      "exception": false,
-     "start_time": "2024-03-27T16:45:34.306649",
+     "start_time": "2024-03-27T20:01:57.896898",
      "status": "completed"
     },
     "tags": []
@@ -189,10 +227,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "655782bb",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:02:05.525296Z",
+     "iopub.status.busy": "2024-03-27T20:02:05.525119Z",
+     "iopub.status.idle": "2024-03-27T20:02:05.546537Z",
+     "shell.execute_reply": "2024-03-27T20:02:05.546192Z"
+    },
+    "papermill": {
+     "duration": 0.024594,
+     "end_time": "2024-03-27T20:02:05.547444",
+     "exception": false,
+     "start_time": "2024-03-27T20:02:05.522850",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       elite       0.82      0.86      0.84       648\n",
+      "    pplcentr       0.77      0.60      0.67       322\n",
+      "        left       0.71      0.75      0.73       279\n",
+      "       right       0.77      0.57      0.65       155\n",
+      "\n",
+      "   micro avg       0.78      0.75      0.76      1404\n",
+      "   macro avg       0.77      0.69      0.72      1404\n",
+      "weighted avg       0.78      0.75      0.76      1404\n",
+      " samples avg       0.39      0.38      0.38      1404\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\n",
     "    classification_report(\n",
@@ -206,10 +278,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cd3f9842",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:02:05.551445Z",
+     "iopub.status.busy": "2024-03-27T20:02:05.551295Z",
+     "iopub.status.idle": "2024-03-27T20:02:05.561376Z",
+     "shell.execute_reply": "2024-03-27T20:02:05.561041Z"
+    },
+    "papermill": {
+     "duration": 0.013088,
+     "end_time": "2024-03-27T20:02:05.562269",
+     "exception": false,
+     "start_time": "2024-03-27T20:02:05.549181",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       elite       0.81      0.88      0.84       648\n",
+      "    pplcentr       0.70      0.73      0.71       322\n",
+      "        left       0.69      0.77      0.73       279\n",
+      "       right       0.68      0.66      0.67       155\n",
+      "\n",
+      "   micro avg       0.75      0.80      0.77      1404\n",
+      "   macro avg       0.72      0.76      0.74      1404\n",
+      "weighted avg       0.75      0.80      0.77      1404\n",
+      " samples avg       0.41      0.40      0.40      1404\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\n",
     "    classification_report(\n",
@@ -223,9 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e391d6d6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:02:05.566478Z",
+     "iopub.status.busy": "2024-03-27T20:02:05.566264Z",
+     "iopub.status.idle": "2024-03-27T20:02:05.576068Z",
+     "shell.execute_reply": "2024-03-27T20:02:05.575739Z"
+    },
+    "papermill": {
+     "duration": 0.013066,
+     "end_time": "2024-03-27T20:02:05.577113",
+     "exception": false,
+     "start_time": "2024-03-27T20:02:05.564047",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "performance = classification_report(\n",
@@ -239,9 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "04a41c11",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:02:05.581554Z",
+     "iopub.status.busy": "2024-03-27T20:02:05.581373Z",
+     "iopub.status.idle": "2024-03-27T20:02:05.587998Z",
+     "shell.execute_reply": "2024-03-27T20:02:05.587657Z"
+    },
+    "papermill": {
+     "duration": 0.009832,
+     "end_time": "2024-03-27T20:02:05.588884",
+     "exception": false,
+     "start_time": "2024-03-27T20:02:05.579052",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "out = pd.DataFrame(performance).T.drop(\"support\", axis=1)\n",
@@ -263,10 +399,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3dce559a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-27T20:02:05.593209Z",
+     "iopub.status.busy": "2024-03-27T20:02:05.592950Z",
+     "iopub.status.idle": "2024-03-27T20:02:05.614043Z",
+     "shell.execute_reply": "2024-03-27T20:02:05.613694Z"
+    },
+    "papermill": {
+     "duration": 0.02434,
+     "end_time": "2024-03-27T20:02:05.615018",
+     "exception": false,
+     "start_time": "2024-03-27T20:02:05.590678",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/st_ac138201/job_2959149_o04c03/ipykernel_3454729/11744537.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "  out.to_latex(src.PATH / \"results/tables/model_performance.tex\", index=False)\n"
+     ]
+    }
+   ],
    "source": [
     "out.to_latex(src.PATH / \"results/tables/model_performance.tex\", index=False)"
    ]
@@ -288,18 +448,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.12"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 3757.974576,
-   "end_time": "2024-03-27T17:47:49.499743",
+   "duration": 37.039272,
+   "end_time": "2024-03-27T20:02:06.935531",
    "environment_variables": {},
    "exception": null,
-   "input_path": "code/03-make_predictions.ipynb",
-   "output_path": "code/03-make_predictions.ipynb",
+   "input_path": "code/03-model_performance.ipynb",
+   "output_path": "code/03-model_performance.ipynb",
    "parameters": {},
-   "start_time": "2024-03-27T16:45:11.525167",
+   "start_time": "2024-03-27T20:01:29.896259",
    "version": "2.5.0"
   }
  },
