--- a/code/02-create_popbert_model.ipynb
+++ b/code/02-create_popbert_model.ipynb
@@ -429,9 +429,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bert_populism",
+   "display_name": ".venv",
    "language": "python",
-   "name": "bert_populism"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -443,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "papermill": {
    "default_parameters": {},
